--- a/EncDec.ipynb
+++ b/EncDec.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2106,7 +2106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -2286,7 +2286,7 @@
        "[3063 rows x 6 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2297,7 +2297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2306,7 +2306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2335,7 +2335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2350,7 +2350,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[27,\n",
+       " 5097,\n",
+       " 50,\n",
+       " 29,\n",
+       " 47,\n",
+       " 6326,\n",
+       " 2743,\n",
+       " 709,\n",
+       " 5341,\n",
+       " 352,\n",
+       " 13,\n",
+       " 304,\n",
+       " 19,\n",
+       " 287,\n",
+       " 881,\n",
+       " 262,\n",
+       " 976,\n",
+       " 835,\n",
+       " 355,\n",
+       " 597,\n",
+       " 286,\n",
+       " 262,\n",
+       " 584,\n",
+       " 1353,\n",
+       " 12,\n",
+       " 5715,\n",
+       " 6951,\n",
+       " 82,\n",
+       " 29847]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokenizer.encode(\"<CLS>\"+\"Ponomariov plays 1. e4 in much the same way as any of the other top-level GMs.\"+ \"<\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2360,7 +2408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2381,11 +2429,15 @@
     "        return len(self.board_states)\n",
     "    \n",
     "    def __getitem__(self, idx):\n",
+    "        out = tokenizer.encode_plus(self.comment[idx], return_attention_mask=True,return_tensors=\"pt\")\n",
+    "        tokens = out[\"input_ids\"]\n",
+    "        attention_mask = out[\"attention_mask\"]\n",
     "        return {\n",
     "            \"board\": torch.tensor(self.board_states[idx], dtype=torch.long),\n",
     "            \"move\": torch.tensor(self.moves[idx], dtype=torch.long),\n",
     "            \"turn\": torch.tensor(self.turn[idx], dtype=torch.long),\n",
-    "            \"comment\": torch.tensor(self.comment[idx], dtype=torch.long),\n",
+    "            \"comment\": torch.tensor(tokens, dtype=torch.long),\n",
+    "            \"attention_mask\": torch.tensor(attention_mask, dtype=torch.long),\n",
     "            \"move_number\": torch.tensor(self.move_number[idx], dtype=torch.long),\n",
     "            \"game_id\": torch.tensor(self.game_id[idx], dtype=torch.long)\n",
     "        }\n",
@@ -2395,18 +2447,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "chessdata = ChessDataset(board_states, moves ,turn,tokenized_comments,df['Move Number'],df['Game Number'])"
+    "chessdata = ChessDataset(board_states, moves ,turn,df[\"Comment\"],df['Move Number'],df['Game Number'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/05/052ncv8d7qlfb__v03p6cqlm0000gn/T/ipykernel_12094/4154532718.py:25: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  \"comment\": torch.tensor(tokens, dtype=torch.long),\n",
+      "/var/folders/05/052ncv8d7qlfb__v03p6cqlm0000gn/T/ipykernel_12094/4154532718.py:26: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  \"attention_mask\": torch.tensor(attention_mask, dtype=torch.long),\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -2420,14 +2482,16 @@
        "         [ 4,  6,  8, 10, 12,  8,  6,  4]]),\n",
        " 'move': tensor(757),\n",
        " 'turn': tensor(1),\n",
-       " 'comment': tensor([  47, 6326, 2743,  709, 5341,  352,   13,  304,   19,  287,  881,  262,\n",
-       "          976,  835,  355,  597,  286,  262,  584, 1353,   12, 5715, 6951,   82,\n",
-       "           13]),\n",
+       " 'comment': tensor([[  47, 6326, 2743,  709, 5341,  352,   13,  304,   19,  287,  881,  262,\n",
+       "           976,  835,  355,  597,  286,  262,  584, 1353,   12, 5715, 6951,   82,\n",
+       "            13]]),\n",
+       " 'attention_mask': tensor([[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "          1]]),\n",
        " 'move_number': tensor(1),\n",
        " 'game_id': tensor(1)}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2438,7 +2502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2466,7 +2530,6 @@
     "\n",
     "    # RNN for processing concatenated representation\n",
     "    self.rnn = nn.LSTM(96, 64, batch_first=True)  # Input size = 64 (CNN) + 32  + 4\n",
-    "    self.linear = nn.Linear(64, 768)\n",
     "\n",
     "  def forward(self, board, move_id, move_number, turn):\n",
     "    board_embedding = self.cnn(board.unsqueeze(1))  # Add channel dimension for CNN\n",
@@ -2478,87 +2541,75 @@
     "    ], dim=1)\n",
     "\n",
     "    rnn_output, _ = self.rnn(concat_embedding)\n",
-    "    rnn_output = self.linear(rnn_output)\n",
     "    \n",
     "    return rnn_output\n",
+    "  \n",
+    "class Mapping(nn.Module):\n",
     "\n",
+    "    def __init__(self, embed_size, device):\n",
+    "        super(Mapping, self).__init__()\n",
+    "        self.embed_size = embed_size\n",
+    "        self.transformer_encoder = nn.TransformerEncoder(\n",
+    "            nn.TransformerEncoderLayer(d_model=embed_size, nhead=16, dim_feedforward=embed_size * 4, dropout=0.08,\n",
+    "                                      device=device), num_layers=5).to(device)\n",
+    "        self.mapper = nn.Linear(embed_size, 4 * embed_size).to(device)\n",
+    "        self.init_weights()\n",
+    "\n",
+    "    def forward(self, img_embedded, train_mode=False):\n",
+    "        x = self.transformer_encoder(img_embedded)\n",
+    "        x = self.mapper(x)\n",
+    "        x = x.view(*([-1, 4, self.embed_size] if train_mode else [4, self.embed_size]))\n",
+    "        return x\n",
+    "\n",
+    "    def init_weights(self):\n",
+    "        for m in self.modules():\n",
+    "            if isinstance(m, nn.Linear):\n",
+    "                nn.init.kaiming_normal_(m.weight, mode='fan_in', nonlinearity='relu')\n",
+    "                nn.init.zeros_(m.bias)\n",
+    "            elif isinstance(m, nn.LayerNorm):\n",
+    "                nn.init.ones_(m.weight)\n",
+    "                nn.init.zeros_(m.bias)\n",
     "\n",
     "\n",
     "class ChessDecoder(nn.Module):\n",
-    "  def __init__(self):\n",
+    "  def __init__(self,tokenizer):\n",
     "    super().__init__()\n",
     "    self.decoder = GPT2LMHeadModel.from_pretrained(\"gpt2\")\n",
+    "    self.tokenizer = tokenizer\n",
+    "    self.tokenizer.pad_token = self.tokenizer.eos_token\n",
     "\n",
-    "  def forward(self, encoder_outputs):\n",
+    "\n",
+    "\n",
+    "  def forward(self, encoder_outputs, attention_mask=None):\n",
     "    # Use relevant arguments from GPT2LMHeadModel for teacher forcing and generation\n",
-    "    return self.decoder(inputs_embeds=encoder_outputs)\n",
+    "    return self.decoder(inputs_embeds=encoder_outputs,attention_mask=attention_mask).logits\n",
     "\n",
     "\n",
     "class ChessCommentaryGenerator(nn.Module):\n",
     "  def __init__(self):\n",
     "    super().__init__()\n",
     "    self.encoder = ChessEncoder()\n",
+    "    self.mapper =  Mapping(768, 'cpu')\n",
     "    self.decoder = ChessDecoder()\n",
+    "    self.optimizer = torch.optim.Adam(self.parameters(), lr=0.001)\n",
     "\n",
-    "  def forward(self, board, move_id, move_number, turn):\n",
-    "    rnn_output = self.encoder(board, move_id, move_number, turn)\n",
-    "    decoder_output = self.decoder(rnn_output)\n",
-    "    return decoder_output\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = ChessCommentaryGenerator()\n",
-    "optimizer = torch.optim.Adam(model.parameters(), lr=0.001)\n",
-    "criterion = nn.CrossEntropyLoss()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def calculate_loss(logits, target, tokenizer):\n",
-    "  \"\"\"\n",
-    "  Calculates cross-entropy loss with padding handling.\n",
-    "\n",
-    "  Args:\n",
-    "      logits: Output logits from the decoder (shape: batch_size, sequence_length, vocab_size).\n",
-    "      target: Target commentary sequence as a list of lists (shape: batch_size, sequence_length).\n",
-    "      tokenizer: Tokenizer object for vocabulary access.\n",
-    "\n",
-    "  Returns:\n",
-    "      loss: Cross-entropy loss with padding masked out.\n",
-    "  \"\"\"\n",
-    "\n",
-    "  # Get padding token ID\n",
-    "  pad_token_id = tokenizer.pad_token_id\n",
-    "\n",
-    "  # Get maximum sequence length in the batch\n",
-    "  max_len = len(target)\n",
-    "\n",
-    "  # Pad target sequences to max length\n",
-    "  padded_target = torch.nn.functional.pad(\n",
-    "      torch.tensor([t + [pad_token_id] * (max_len - len(t)) for t in target]),\n",
-    "      padding=(0, 1),  # Pad at the end\n",
-    "      value=pad_token_id\n",
-    "  )\n",
-    "\n",
-    "  # Create mask for non-padded elements\n",
-    "  mask = padded_target != pad_token_id\n",
-    "\n",
-    "  # Flatten logits and target for efficient loss calculation\n",
-    "  logits_flat = logits.view(-1, logits.size(-1))\n",
-    "  target_flat = padded_target.masked_select(mask).view(-1)\n",
-    "\n",
-    "  # Calculate cross-entropy loss with reduction='mean' for averaging\n",
-    "  loss = torch.nn.functional.cross_entropy(logits_flat, target_flat, reduction='mean')\n",
-    "  return loss\n"
+    "  def train_forward(self, board, move_id, move_number, turn, comment,attention_mask):\n",
+    "    x , x_mask = comment[:-1],attention_mask[:-1]\n",
+    "    y = comment[1:]\n",
+    "    encoder_output = self.encoder(board, move_id, move_number, turn)\n",
+    "    mapper_output = self.mapper(encoder_output,train_mode = True)\n",
+    "    text_emb = self.decoder.decoder.transformer.wte(x)\n",
+    "    x = torch.concat([mapper_output,text_emb],dim=1)\n",
+    "    x_mask = torch.concat([torch.ones(x_mask.shape[0],4),x_mask],dim=1)\n",
+    "    pos_emb = self.decoder.transformer.wpe(torch.arange(x.shape[1]))\n",
+    "    pos_emb = pos_emb.expand_as(x)\n",
+    "    x = x+ pos_emb\n",
+    "    res = self.decoder(x,attention_mask=x_mask)\n",
+    "    res = torch.softmax(res,dim=2)\n",
+    "    loss = self.criterion(res.view(-1, res.size(-1)), y.view(-1))\n",
+    "    loss.backward()\n",
+    "    self.optimizer.zero_grad()\n",
+    "    return loss\n"
    ]
   },
   {
@@ -2602,6 +2653,7 @@
     "# Load dataset, optimizer, loss function (similar to previous code snippet)\n",
     "prev_gno = -1\n",
     "# Training loop\n",
+    "model = ChessCommentaryGenerator()\n",
     "for epoch in range(1):\n",
     "  for data in chessdata:\n",
     "    # Forward pass\n",
@@ -2609,53 +2661,10 @@
     "        prev_gno = data['game_id']\n",
     "        model.rnn.hidden = (torch.zeros(1, 1, 64), torch.zeros(1, 1, 64))\n",
     "        \n",
-    "    print(data[\"comment\"])\n",
-    "        \n",
-    "    decoder_output = model(data[\"board\"].float().reshape(1,8,8), data[\"move\"], data[\"move_number\"], data[\"turn\"])\n",
-    "    logits = decoder_output.logits\n",
-    "    # loss = calculate_loss(decoder_output.logits, data[\"comment\"], tokenizer)\n",
-    "    print(logits.shape)\n",
-    "    print(data[\"comment\"].shape)\n",
-    "    loss = torch.nn.functional.cross_entropy(logits, data[\"comment\"])\n",
-    "    # Calculate loss and backpropagate\n",
-    "    loss.backward()\n",
-    "    optimizer.step()\n",
-    "    optimizer.zero_grad()\n",
-    "\n",
-    "    # Print training progress (optional)\n",
-    "\n",
-    "def train_one_sample(board, move_id, move_number, turn, commentary):\n",
-    "  # ... (model definition remains the same with updated ChessDecoder)\n",
-    "\n",
-    "  # Initialize decoder input with start token\n",
-    "  input_ids = torch.tensor([tokenizer.encode(\"<s>\")], dtype=torch.long)\n",
-    "\n",
-    "  for comment_word in commentary:\n",
-    "    # Get decoder output\n",
-    "    decoder_output = model(board.float().reshape(1,8,8), move_id, move_number, turn, input_ids=input_ids)\n",
-    "    logits = decoder_output.logits[:, -1, :]\n",
-    "\n",
-    "    # Calculate loss (using teacher forcing)\n",
-    "    target = torch.tensor([tokenizer.encode(comment_word)], dtype=torch.long)\n",
-    "    loss = calculate_loss(logits, target, tokenizer)\n",
-    "\n",
-    "    # Backpropagate and update weights\n",
-    "    loss.backward()\n",
-    "    optimizer.step()\n",
-    "    optimizer.zero_grad()\n",
-    "\n",
-    "    # Update decoder input for next iteration (teacher forcing)\n",
-    "    input_ids = torch.cat((input_ids, target), dim=-1)\n",
-    "\n",
-    "# Training loop (iterate over data)\n",
-    "prev_gno = -1\n",
-    "for epoch in range(1):\n",
-    "  for data in chessdata:\n",
-    "    if prev_gno != data['game_id']:\n",
-    "      prev_gno = data['game_id']\n",
-    "      model.decoder.decoder.init_cache = None  # Reset decoder hidden state\n",
-    "      model.encoder.rnn.hidden = (torch.zeros(1, 1, 64), torch.zeros(1, 1, 64))\n",
-    "    train_one_sample(data[\"board\"], data[\"move\"], data[\"move_number\"], data[\"turn\"], data[\"comment\"])\n"
+    "    x , x_mask = data[\"comment\"][:-1],data[\"attention_mask\"][:-1]\n",
+    "    y = data[\"comment\"][1:]   \n",
+    "    loss = model.train_forward(data[\"board\"].float().reshape(1,8,8), data[\"move\"], data[\"move_number\"], data[\"turn\"], data[\"comment\"],data[\"attention_mask\"])\n",
+    "    "
    ]
   },
   {
