--- a/EncDec.ipynb
+++ b/EncDec.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,18 +12,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/abdulmk/opt/anaconda3/envs/chess/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
@@ -32,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2106,7 +2097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -2286,7 +2277,7 @@
        "[3063 rows x 6 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2297,7 +2288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2306,7 +2297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2335,7 +2326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2350,7 +2341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2387,7 +2378,7 @@
        " 29847]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2398,7 +2389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2408,7 +2399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2447,7 +2438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2456,16 +2447,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/05/052ncv8d7qlfb__v03p6cqlm0000gn/T/ipykernel_12094/4154532718.py:25: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "/var/folders/05/052ncv8d7qlfb__v03p6cqlm0000gn/T/ipykernel_15594/4154532718.py:25: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  \"comment\": torch.tensor(tokens, dtype=torch.long),\n",
-      "/var/folders/05/052ncv8d7qlfb__v03p6cqlm0000gn/T/ipykernel_12094/4154532718.py:26: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "/var/folders/05/052ncv8d7qlfb__v03p6cqlm0000gn/T/ipykernel_15594/4154532718.py:26: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  \"attention_mask\": torch.tensor(attention_mask, dtype=torch.long),\n"
      ]
     },
@@ -2491,7 +2482,7 @@
        " 'game_id': tensor(1)}"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2502,7 +2493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2529,7 +2520,7 @@
     "    self.turn_embedding = nn.Embedding(2, 4)  # Assuming two players\n",
     "\n",
     "    # RNN for processing concatenated representation\n",
-    "    self.rnn = nn.LSTM(96, 64, batch_first=True)  # Input size = 64 (CNN) + 32  + 4\n",
+    "    self.rnn = nn.LSTM(96, 64)  # Input size = 64 (CNN) + 32  + 4\n",
     "\n",
     "  def forward(self, board, move_id, move_number, turn):\n",
     "    board_embedding = self.cnn(board.unsqueeze(1))  # Add channel dimension for CNN\n",
@@ -2577,7 +2568,7 @@
     "    self.decoder = GPT2LMHeadModel.from_pretrained(\"gpt2\")\n",
     "    self.tokenizer = tokenizer\n",
     "    self.tokenizer.pad_token = self.tokenizer.eos_token\n",
-    "\n",
+    "    \n",
     "\n",
     "\n",
     "  def forward(self, encoder_outputs, attention_mask=None):\n",
@@ -2586,19 +2577,21 @@
     "\n",
     "\n",
     "class ChessCommentaryGenerator(nn.Module):\n",
-    "  def __init__(self):\n",
+    "  def __init__(self,tokenizer):\n",
     "    super().__init__()\n",
     "    self.encoder = ChessEncoder()\n",
-    "    self.mapper =  Mapping(768, 'cpu')\n",
-    "    self.decoder = ChessDecoder()\n",
+    "    self.mapper =  Mapping(64, 'cpu')\n",
+    "    self.decoder = ChessDecoder(tokenizer)\n",
     "    self.optimizer = torch.optim.Adam(self.parameters(), lr=0.001)\n",
+    "    self.criterion = nn.CrossEntropyLoss(ignore_index=self.decoder.tokenizer.pad_token_id)\n",
     "\n",
     "  def train_forward(self, board, move_id, move_number, turn, comment,attention_mask):\n",
-    "    x , x_mask = comment[:-1],attention_mask[:-1]\n",
-    "    y = comment[1:]\n",
+    "    x , x_mask = comment[:-1].unsqueeze(0),attention_mask[:-1].unsqueeze(0)\n",
+    "    y = comment[1:].unsqueeze(0)\n",
     "    encoder_output = self.encoder(board, move_id, move_number, turn)\n",
     "    mapper_output = self.mapper(encoder_output,train_mode = True)\n",
     "    text_emb = self.decoder.decoder.transformer.wte(x)\n",
+    "    print(text_emb.shape,mapper_output.shape)\n",
     "    x = torch.concat([mapper_output,text_emb],dim=1)\n",
     "    x_mask = torch.concat([torch.ones(x_mask.shape[0],4),x_mask],dim=1)\n",
     "    pos_emb = self.decoder.transformer.wpe(torch.arange(x.shape[1]))\n",
@@ -2606,7 +2599,7 @@
     "    x = x+ pos_emb\n",
     "    res = self.decoder(x,attention_mask=x_mask)\n",
     "    res = torch.softmax(res,dim=2)\n",
-    "    loss = self.criterion(res.view(-1, res.size(-1)), y.view(-1))\n",
+    "    loss = self.criterion(res[:,4:,:].reshape(-1,res.shape[-1]),y.shape(-1))\n",
     "    loss.backward()\n",
     "    self.optimizer.zero_grad()\n",
     "    return loss\n"
@@ -2614,38 +2607,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([  47, 6326, 2743,  709, 5341,  352,   13,  304,   19,  287,  881,  262,\n",
-      "         976,  835,  355,  597,  286,  262,  584, 1353,   12, 5715, 6951,   82,\n",
-      "          13])\n",
-      "torch.Size([1, 50257])\n",
-      "torch.Size([25])\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/05/052ncv8d7qlfb__v03p6cqlm0000gn/T/ipykernel_3460/2829073205.py:34: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
-      "  torch.tensor(move_number).view(-1, 1),\n"
+      "/Users/abdulmk/opt/anaconda3/envs/chess/lib/python3.9/site-packages/torch/nn/modules/transformer.py:286: UserWarning: enable_nested_tensor is True, but self.use_nested_tensor is False because encoder_layer.self_attn.batch_first was not True(use batch_first for better inference performance)\n",
+      "  warnings.warn(f\"enable_nested_tensor is True, but self.use_nested_tensor is False because {why_not_sparsity_fast_path}\")\n"
      ]
     },
     {
-     "ename": "RuntimeError",
-     "evalue": "0D or 1D target tensor expected, multi-target not supported",
+     "ename": "",
+     "evalue": "",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[47], line 18\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[38;5;28mprint\u001b[39m(logits\u001b[38;5;241m.\u001b[39mshape)\n\u001b[1;32m     17\u001b[0m \u001b[38;5;28mprint\u001b[39m(data[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcomment\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mshape)\n\u001b[0;32m---> 18\u001b[0m loss \u001b[38;5;241m=\u001b[39m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnn\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfunctional\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcross_entropy\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlogits\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdata\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mcomment\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43munsqueeze\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mreduction\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mmean\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     19\u001b[0m \u001b[38;5;66;03m# Calculate loss and backpropagate\u001b[39;00m\n\u001b[1;32m     20\u001b[0m loss\u001b[38;5;241m.\u001b[39mbackward()\n",
-      "File \u001b[0;32m~/opt/anaconda3/envs/chess/lib/python3.9/site-packages/torch/nn/functional.py:3059\u001b[0m, in \u001b[0;36mcross_entropy\u001b[0;34m(input, target, weight, size_average, ignore_index, reduce, reduction, label_smoothing)\u001b[0m\n\u001b[1;32m   3057\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m size_average \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mor\u001b[39;00m reduce \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m   3058\u001b[0m     reduction \u001b[38;5;241m=\u001b[39m _Reduction\u001b[38;5;241m.\u001b[39mlegacy_get_string(size_average, reduce)\n\u001b[0;32m-> 3059\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_C\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_nn\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcross_entropy_loss\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtarget\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mweight\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m_Reduction\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_enum\u001b[49m\u001b[43m(\u001b[49m\u001b[43mreduction\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mignore_index\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlabel_smoothing\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: 0D or 1D target tensor expected, multi-target not supported"
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
@@ -2653,13 +2634,14 @@
     "# Load dataset, optimizer, loss function (similar to previous code snippet)\n",
     "prev_gno = -1\n",
     "# Training loop\n",
-    "model = ChessCommentaryGenerator()\n",
+    "\n",
+    "model = ChessCommentaryGenerator(tokenizer)\n",
     "for epoch in range(1):\n",
     "  for data in chessdata:\n",
     "    # Forward pass\n",
     "    if prev_gno != data['game_id']:\n",
     "        prev_gno = data['game_id']\n",
-    "        model.rnn.hidden = (torch.zeros(1, 1, 64), torch.zeros(1, 1, 64))\n",
+    "        model.encoder.rnn.hidden = (torch.zeros(1, 1, 64), torch.zeros(1, 1, 64))\n",
     "        \n",
     "    x , x_mask = data[\"comment\"][:-1],data[\"attention_mask\"][:-1]\n",
     "    y = data[\"comment\"][1:]   \n",
